Staff Type Dlg Box - TAB: Remove "on_" from slot names.
Qt uses the prefix for automatic signal-slot matching and generates run-time warnings if no match is found.


Former-commit-id: 8d6f1216741f46611760547badde61125ace07c1

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -133,6 +133,9 @@
              <property name="suffix">
               <string>sp</string>
              </property>
+             <property name="singleStep">
+              <double>0.250000000000000</double>
+             </property>
             </widget>
            </item>
           </layout>
